--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,10 @@ llm:
   url: http://localhost:8000
 server:
   port: 8081
+  
 spring:
-  autoconfigure:
-    exclude: 
-      - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+  datasource:
+    url: jdbc:mysql://localhost:3306/frauddb
+    username: root
+    password: "12345678"
+    driver-class-name: com.mysql.cj.jdbc.Driver
